--- a/app/styles/pages/_post.scss
+++ b/app/styles/pages/_post.scss
@@ -19,14 +19,25 @@
 
   textarea {
     font-size: 1em;
-    height: 300px;
+    height: 500px;
     line-height: 1.5em;
     resize: none;
     width: 100%;
   }
 
-  .content * {
-    max-width: 100%;
+  .content {
+    display: flex;
+  }
+
+  .editor {
+    flex-basis: 1000%;
+    padding-right: 20px;
+  }
+
+  .rendered {
+    * {
+      max-width: 100%;
+    }
   }
 
 }
