Set up matching routing, bootstrap header

--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,3 +1,25 @@
+<nav class="navbar navbar-inverse navbar-fixed-top">
+  <div class="container">
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      <a class="navbar-brand" href="#">Ember Blog</a>
+    </div>
+
+     <!-- Collect the nav links, forms, and other content for toggling -->
+    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+      <ul class="nav navbar-nav">
+        <li>{{link-to 'All' 'posts'}}</li>
+        <li>{{link-to 'New Post' 'posts.new'}}</li>
+      </ul>
+    </div>
+  </div>
+</nav>
+
 <div class="container">
   {{outlet}}
 </div>
