--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -7,7 +7,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="#">Ember Blog</a>
+      {{link-to 'Ember Blog' 'posts' class='navbar-brand'}}
     </div>
 
      <!-- Collect the nav links, forms, and other content for toggling -->
