Final touches and stuff

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -7,14 +7,7 @@
 // Pages
 @import 'pages/post';
 
-html,
-body {
-  font-family: Helvetica, Arial, sans-serif;
-  line-height: 1.6em;
+.content {
+  margin-top: 50px;
+  padding-top: 1em;
 }
-
-.container {
-  padding-left: 10%;
-  padding-right: 10%;
-}
-
